--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://06470396-3b40-42c9-b1b8-93166d017ed4.preview.emergentagent.com
 WDS_SOCKET_PORT=443
