--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node (with Yarn cache)
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: yarn
           cache-dependency-path: frontend/yarn.lock
 
-      - name: Install deps
+      - name: Enable Corepack (Yarn)
+        run: corepack enable
+
+      - name: Install dependencies
         working-directory: frontend
-        run: |
-          if [ -f package-lock.json ]; then npm ci; else npm install; fi
+        run: yarn install --frozen-lockfile
 
       - name: Build CRA
         working-directory: frontend
-        run: npm run build
+        run: yarn build
 
       - name: Add CNAME & 404
         run: |
